adição de botões

--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="shortcut icon" href="favicon (1).ico" type="image/x-icon">
     <link rel="stylesheet" href="estilos/style.css">
+    <link rel="shortcut icon" href="favicon (1).ico" type="image/x-icon">
     <title>Projeto Redes Sociais</title>
 </head>
 <body>
@@ -13,7 +13,13 @@
             <iframe src="home.html" frameborder="0" name="tela" id="tela"></iframe>
         </section>
         <section id="redes-sociais">
-
+            
+            <a href="#" target="tela"> <img src="logos/logo-home.jpg" alt="Home"></a> <br>
+            <a href="#" target="tela"> <img src="logos/logo-youtube.jpg" alt="Youtube"></a> <br>
+            <a href="#" target="tela"> <img src="logos/logo-github.jpg" alt="GitHub"></a> <br>
+            <a href="#" target="tela"> <img src="logos/logo-instagram.jpg" alt="Instagram"></a> <br>
+            <a href="#" target="tela"> <img src="logos/logo-twitter.jpg" alt="Twitter"></a> <br>
+            <a href="#" target="tela"> <img src="logos/logo-facebook.jpg" alt="facebook"></a> <br>
         </section>
     </main>
     
